# XMU-learning_ML

./: .gitignore
HW/: 0902.md  0909.md  0923.md  1006.md  1104.md  1111.md  1118.md  1125.md  1209.md  1216.md  1223.md
HW/.obsidian/: app.json  workspace.json
Lab/: .gitignore  pyproject.toml
Lab/0912/: 04 线性回归.ipynb
Lab/0926/: 5.3.py  5.5.py
Lab/1010/: 17 EM算法.ipynb
Lab/1024/第15章 主成分分析/: 15 主成分分析.ipynb
Lab/1121/: lenetpython.py
Lab/1204/: rnndemo.py
Lab/1219/: rldemo_studentversion.py
