[project]
name = "XMU-learning_ML"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Exxon", email = "exxonliu001@yahoo.com"},
]
dependencies = ["torch>=2.8.0", "torchvision>=0.23.0", "ipykernel>=6.30.1", "matplotlib>=3.10.6", "scikit-learn>=1.7.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
